# prompt_mail

./: LICENSE  memory.db
db/: chroma.sqlite3
promptmail/: README.md  memory.db  pyproject.toml
promptmail/db/: chroma.sqlite3
promptmail/src/promptmail/: __init__.py  crew.py  main.py
promptmail/src/promptmail/config/: agents.yaml  context.yaml  tasks.yaml
promptmail/src/promptmail/tools/: __init__.py  custom_tool.py
