[project]
name = "promptmail"
version = "0.1.0"
description = "promptmail using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
promptmail = "promptmail.main:run"
run_crew = "promptmail.main:run"
train = "promptmail.main:train"
replay = "promptmail.main:replay"
test = "promptmail.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
